instanceing does not work on the vertex made of subdivision #69993

Closed
opened 2019-09-17 20:26:49 +02:00 by Tomotsugu Nakamura · 8 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits

Blender Version
Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47, hash: f6cb5f5449
Broken: version: 2.81 (sub 11), branch: master, commit date: 2019-09-16 21:02, hash: 76650402f3

Short description of error
When I try to create an instance on the vertex of an object using a subdivision modifier, it is created only at the vertex position before division.
Is there any reason why it works with other modifiers but doesn't work with this?

image.png

**System Information** Operating system: Windows-10-10.0.17134 64 Bits **Blender Version** Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47, hash: `f6cb5f5449` Broken: version: 2.81 (sub 11), branch: master, commit date: 2019-09-16 21:02, hash: 76650402f3 **Short description of error** When I try to create an instance on the vertex of an object using a subdivision modifier, it is created only at the vertex position before division. Is there any reason why it works with other modifiers but doesn't work with this? ![image.png](https://archive.blender.org/developer/F7753733/image.png)

Added subscriber: @yukimituki11

Added subscriber: @yukimituki11

Added subscriber: @brecht

Added subscriber: @brecht

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Brecht Van Lommel self-assigned this 2019-09-18 18:42:28 +02:00

It has always worked this way, the behavior would arguably be better if changed. But that's breaking backwards compatibility, and outside the scope of the bug tracker in any case.
https://wiki.blender.org/wiki/Communication/Contact#User_Feedback_and_Requests

It has always worked this way, the behavior would arguably be better if changed. But that's breaking backwards compatibility, and outside the scope of the bug tracker in any case. https://wiki.blender.org/wiki/Communication/Contact#User_Feedback_and_Requests

What does it mean to break backward compatibility?
Some changes have been made to the 2.8 instancing from the 2.7 Duplication feature, and 2.7 does what I expect.
image.png

What does it mean to break backward compatibility? Some changes have been made to the 2.8 instancing from the 2.7 Duplication feature, and 2.7 does what I expect. ![image.png](https://archive.blender.org/developer/F7758299/image.png)

This issue was referenced by 3c09e4d8cc

This issue was referenced by 3c09e4d8ccc805fde07565bab620e7295e8ba2ac

Changed status from 'Archived' to: 'Resolved'

Changed status from 'Archived' to: 'Resolved'

Seems indeed this was accidentally changed in 2.80, fixed now.

Seems indeed this was accidentally changed in 2.80, fixed now.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69993
No description provided.