Fix T69993: vertex instancing only works on original vertices

This behavior was accidentally changed in 3e6f37b9, now it works compatible
with 2.79 again.